# strands_navigation

./: .gitignore  README.md
emergency_behaviours/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.py
emergency_behaviours/launch/: emergency_behaviours.launch
emergency_behaviours/scripts/: nogo_node_stop.py  safety_trigger.py
joy_map_saver/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
joy_map_saver/launch/: ap_map_saver.launch  joy_map_saver.launch
joy_map_saver/src/: ap_map_saver.cpp
message_store_map_switcher/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  setup.py
message_store_map_switcher/scripts/: message_store_map_server.py
message_store_map_switcher/src/: message_store_map_saver.cpp
message_store_map_switcher/srv/: PublishMap.srv  SwitchMap.srv
nav_goals_generator/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
nav_goals_generator/launch/: .nav_goals_generator.launch.swp  nav_goals_generator.launch
nav_goals_generator/scripts/: generate_nav_goals.py  nav_goals_generator.py
nav_goals_generator/srv/: NavGoals.srv  ROINavGoals.srv  WeightedNavGoals.srv
pose_initialiser/: CHANGELOG.rst  CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
pose_initialiser/scripts/: pose_initialiser.py
strands_navigation/: CHANGELOG.rst  CMakeLists.txt  package.xml
strands_navigation_msgs/: CHANGELOG.rst  CMakeLists.txt  LICENSE  package.xml
strands_navigation_msgs/action/: BuildTopPrediction.action  ExecutePolicyMode.action  MonitoredNavigation.action
strands_navigation_msgs/msg/: CurrentEdge.msg  DynClassLoaderDef.msg  Edge.msg  MonitoredNavEvent.msg  NavRoute.msg  NavStatistics.msg  NavStatus.msg  TopEdge.msg  TopMap.msg  TopNode.msg  TopologicalMap.msg  TopologicalNode.msg  TopologicalRoute.msg
strands_navigation_msgs/srv/: AddContent.srv  AddEdge.srv  AddHelper.srv  AddMonitorRecoveryPair.srv  AddNode.srv  AddTag.srv  AskHelp.srv  EstimateTravelTime.srv  GetEdgesBetweenNodes.srv  GetHelpers.srv  GetMonitorRecoveryPairs.srv  GetNavRecovery.srv  GetNodeTags.srv  GetRouteBetween.srv  GetRouteTo.srv  GetTaggedNodes.srv  GetTags.srv  GetTopologicalMap.srv  LoadTopoNavTestScenario.srv  LocalisePose.srv  ModifyTag.srv  PauseResumeNav.srv  PredictEdgeState.srv  ReconfAtEdges.srv  Register.srv  RunTopoNavTestScenario.srv  SetHelpers.srv  SetMonitorRecoveryPairs.srv  SetNavRecovery.srv  UpdateEdge.srv  UpdateNodeName.srv  UpdateNodeTolerance.srv
topological_logging_manager/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
topological_logging_manager/conf/: white_list_all.yaml
topological_logging_manager/launch/: manager.launch
topological_logging_manager/msg/: LoggingManager.msg
topological_logging_manager/scripts/: logging_manager.py
topological_navigation/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  setup.py
topological_navigation/action/: ExecutePolicy.action  GotoNode.action
topological_navigation/launch/: emergency_behaviours.launch  minimal_topological_navigation.launch  reconf_at_edges_server.launch  topo_nav_global.launch  topo_nav_local.launch  topological_map_edition.launch  topological_map_visualise.launch  topological_navigation.launch  topological_navigation_empty_map.launch
topological_navigation/scripts/: execute_policy_server.py  get_simple_policy.py  localisation.py  manual_edge_predictions.py  map_manager.py  map_publisher.py  mean_based_prediction.py  nav_client.py  navigation.py  node_finder.py  nogo_node_stop.py  reconf_at_edges_server.py  search_route.py  speed_based_prediction.py  test_top_pred.py  tmap_from_waypoints.py  topo_exporter.py  topol_nav_client.py  topological_nav.py  topological_node.py  topological_prediction.py  travel_time_estimator  travel_time_estimator.py  visualise_map.py
topological_navigation/tests/: README.md  navigation_scenarios.test  navigation_test_joypad_control.py  scenario_server.py  topological_navigation_tester.py  topological_navigation_tester_critical.py  topological_navigation_tester_supplementary.py  travel_time_estimator.test  travel_time_tester.py
topological_rviz_tools/: CHANGELOG.rst  CMakeLists.txt  LICENSE  README.md  package.xml  plugin_description.xml
topological_rviz_tools/conf/: topological_rviz_tools.rviz
topological_rviz_tools/images/: 00_annotated.xcf
topological_rviz_tools/launch/: strands_rviz_topmap.launch
topological_rviz_tools/scripts/: python_topmap_interface.py
topological_rviz_tools/src/: edge_controller.cpp  edge_controller.h  edge_property.cpp  edge_property.h  node_controller.cpp  node_controller.h  node_property.cpp  node_property.h  pose_property.cpp  pose_property.h  tag_controller.cpp  tag_controller.h  tag_property.cpp  tag_property.h  topmap_manager.cpp  topmap_manager.h  topological_edge_tool.cpp  topological_edge_tool.h  topological_map_panel.cpp  topological_map_panel.h  topological_node_tool.cpp  topological_node_tool.h
topological_rviz_tools/srv/: AddEdge.srv
topological_utils/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.py
topological_utils/launch/: create_topological_map.launch  dummy_topological_navigation.launch  empty_topological_map.launch  mapping.launch  topological_prediction_test.launch
topological_utils/msg/: edge.msg  node.msg
topological_utils/scripts/: LoadPointSet.py  add_content.py  add_edge.py  add_node.py  add_node_tags.py  check_map  draw_map.py  draw_predicted_map.py  dummy_topological_navigation  dummy_topological_navigation.py  edge_analysis.py  edge_length_analysis.py  evaluate_predictions.py  insert_empty_map.py  insert_map.py  joy_add_node.py  joy_add_waypoint.py  list_maps  load_json_map.py  load_yaml_map.py  map_collection_change.py  map_export.py  map_to_json.py  map_to_yaml.py  menu_test.py  migrate.py  node_metadata.py  node_rm.py  play_draw.py  plot_topo_map.py  plot_yaml.py  print_nav_stats.py  remove_node_tags.py  rename_node  rm_map_from_db.py  tmap_from_waypoints.py  tmap_to_yaml.py  topo2svg.py  topological_map_update.py  visualise_map.py  (+1 more)
topological_utils/srv/: NodeMetadata.srv
topological_utils/support/: empty.tmap  map_edition.rviz
(+64 files in other folders)
