<?xml version="1.0"?>
<package>
  <name>emergency_behaviours</name>
  <version>1.1.0</version>
  <description>The emergency_behaviours package</description>

  <maintainer email="jpulidofentanes@lincoln.ac.uk">Jaime Pulido Fentanes</maintainer>

  <author>Jaime Pulido Fentanes</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>mongodb_store</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>strands_emails</build_depend>
  <build_depend>topological_navigation</build_depend>

  <run_depend>actionlib_msgs</run_depend>
  <run_depend>mongodb_store</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>strands_emails</run_depend>
  <run_depend>topological_navigation</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
