<?xml version="1.0"?>
<package>
  <name>message_store_map_switcher</name>
  <version>0.0.42</version>
  <description>A package for manipulating and serving maps from the mongodb_store.</description>

  <maintainer email="n.a.hawes@cs.bham.ac.uk">Nick Hawes</maintainer>

  <license>MIT</license>

  <author email="n.a.hawes@cs.bham.ac.uk">Nick Hawes</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>map_server</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>mongodb_store</build_depend>
  <build_depend>sdl-image</build_depend>
  <build_depend>yaml-cpp</build_depend>

  <run_depend>map_server</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>mongodb_store</run_depend>
  <run_depend>sdl-image</run_depend>
  <run_depend>yaml-cpp</run_depend>

</package>
