<?xml version="1.0"?>
<package>
  <name>nav_goals_generator</name>
  <version>1.1.0</version>
  <description>The nav_goals_generator package</description>

  <maintainer email="l.kunze@cs.bham.ac.uk">Lars Kunze</maintainer>

  <license>MIT</license>

  <author email="l.kunze@cs.bham.ac.uk">Lars Kunze</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>

</package>
