<?xml version="1.0"?>
<package>
  <name>pose_initialiser</name>
  <version>1.1.0</version>
  <description>The pose_initialiser package</description>

  <maintainer email="jpulidofentanes@lincoln.ac.uk">Jaime Pulido Fentanes</maintainer>

  <license>MIT</license>

  <url type="website">https://github.com/strands-project/strands_navigation</url>
  
  <author email="jpulidofentanes@lincoln.ac.uk">Jaime Pulido Fentanes</author>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>geometry_msgs</build_depend>
  
  <run_depend>rospy</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>geometry_msgs</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
