<?xml version="1.0"?>
<package>
  <name>strands_navigation_msgs</name>
  <version>1.1.0</version>
  <description>The strands_navigation_msgs package</description>

  <maintainer email="b.lacerda@cs.bham.ac.uk">Bruno Lacerda</maintainer>

  <license>MIT</license>

  <url type="website">http://www/</url>

  <author email="b.lacerda@cs.bham.ac.uk">Bruno Lacerda</author>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  
  <run_depend>std_msgs</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
    
  <export/>
</package>
