<?xml version="1.0"?>
<package>
  <name>topological_logging_manager</name>
  <version>1.1.0</version>
  <description>The topological_logging_manager package</description>

  <maintainer email="cdondrup@lincoln.ac.uk">cdondrup</maintainer>

  <license>MIT</license>

  <url type="github">https://github.com/strands-project/strands_navigation</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>rosparam</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>strands_navigation_msgs</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rosparam</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>strands_navigation_msgs</run_depend>


  <export/>
</package>
