<?xml version="1.0"?>
<package>
  <name>topological_utils</name>
  <version>1.0.0</version>
  <description>The topological_utils package</description>

  <maintainer email="jpulidofentanes@lincoln.ac.uk">Jaime Pulido Fentanes</maintainer>

  <license>MIT</license>

  <url type="website">https://github.com/strands-project/strands_navigation</url>
  
  <author email="jpulidofentanes@lincoln.ac.uk">Jaime Pulido Fentanes</author>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>mongodb_store</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>topological_navigation</build_depend>
  
  <run_depend>rospy</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>mongodb_store</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>topological_navigation</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
